@@ -1,3 +1,7 @@
+2005-10-31  Roger While <simrw@sim-basis.de>
+
+	* cobc.c : Cater for -Wno-pointer-check correctly
+
 2005-10-26  Roger While <simrw@sim-basis.de>
 
 	* typeck.c : Remove HAVE_DB ifdef
