@@ -1,3 +1,8 @@
+2005-10-31  Roger While <simrw@sim-basis.de>
+
+	* configure.ac : Pick up -Wno-pointer-sign
+	  and the visibility attribute
+
 2005-10-28  Roger While <simrw@sim-basis.de>
 
 	* configure.ac : Propagate endian value
